--- a/index.html
+++ b/index.html
@@ -110,31 +110,33 @@
             <div class="columns is-centered">
                 <div class="column has-text-centered">
                     <h1 class="title is-1 publication-title">Mesh Neural Cellular Automata</h1>
-                    <div class="is-size-4 publication-authors">
+                    <div class="is-size-5 publication-authors">
                         <span class="author-block">
-                            <a href="https://scholar.google.com/citations?hl=en&user=bddQ6pQAAAAJ">Ehsan Pajouheshgar</a><sup>*</sup>,</span>
+                            <a href="https://scholar.google.com/citations?hl=en&user=bddQ6pQAAAAJ">Ehsan Pajouheshgar</a><sup>* 1</sup>,</span>
                         <span class="author-block">
-                            <a href="https://scholar.google.com/citations?user=jvCvNPQAAAAJ&hl=en/">Yitao Xu</a><sup>*</sup>,</span>
+                            <a href="https://scholar.google.com/citations?user=jvCvNPQAAAAJ&hl=en/">Yitao Xu</a><sup>* 1</sup>,</span>
                         <span class="author-block">
-                            <a href="https://scholar.google.com/citations?user=A_HbzQMAAAAJ/">Alexander Mordvinstev</a>,</span>
+                            <a href="https://scholar.google.com/citations?user=A_HbzQMAAAAJ/">Alexander Mordvinstev</a><sup>2</sup>,</span>
                         <br>
                         <span class="author-block">
-                            <a href="https://scholar.google.se/citations?user=x5sfH5MAAAAJ&hl=en/">Eyvind Niklasson</a>,</span>
+                            <a href="https://scholar.google.se/citations?user=x5sfH5MAAAAJ&hl=en/">Eyvind Niklasson</a><sup>2</sup>,</span>
                         <span class="author-block">
-                            <a href="https://scholar.google.com/citations?user=kCy8JG8AAAAJ&hl=en">Tong Zhang</a>,</span>
+                            <a href="https://scholar.google.com/citations?user=kCy8JG8AAAAJ&hl=en">Tong Zhang</a><sup>1</sup>,</span>
                         <span class="author-block">
-                            <a href="https://www.epfl.ch/labs/ivrl/">Sabine Süsstrunk</a></span>
+                            <a href="https://www.epfl.ch/labs/ivrl/">Sabine Süsstrunk</a><sup>1</sup></span>
 
 
                     </div>
-                    <div class="is-size-5 publication-authors">
-                        <span class="author-block">Image and Visual Representation Lab (IVRL)</span>
+                    <div class="is-size-6 publication-authors">
+                        <span class="author-block"><sup>*</sup> Denotes equal contribution</span>
                     </div>
                     <!--                    <div class="is-size-5 publication-authors">-->
                     <!--                        <span class="author-block">School of Computer and Communication Sciences (IC)</span>-->
                     <!--                    </div>-->
                     <div class="is-size-5 publication-authors">
-                        <span class="author-block">École Polytechnique Fédérale de Lausanne (EPFL)</span>
+                        <span class="author-block"><sup>1</sup>EPFL</span>
+                        &emsp;&emsp;
+                        <span class="author-block"><sup>2</sup>Google Research</span>
                     </div>
 
                     <!--                    <div class="is-size-4 publication-authors">-->
@@ -311,7 +313,7 @@
 
 
                             <label>
-                                <img id="camera_toggle" src="images/camera_locked.png" width="64px" height="64px"/>
+                                <img title="Lock/Unlock camera" id="camera_toggle" src="images/camera_locked.png" width="64px" height="64px"/>
                             </label>
 
                             <svg class="icon" id="zoomIn">
@@ -340,7 +342,7 @@
                         <div>
                             <input type="range" id="rotation" min="0" max="360" step="1" value="0"></br>Rotation:
                             <label id="rotationLabel"></label><br>
-                            <input type="range" id="bumpiness" min="-50" max="50" step="1" value="3"></br>Bumpiness:
+                            <input type="range" id="bumpiness" min="-10" max="10" step="1" value="3"></br>Bumpiness:
                             <label id="bumpinessLabel"></label>
                         </div>
                         <div id='subdivisionSelect' class="button-group">
