Fix referal links

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <span class="author-block">
                             <a href="https://scholar.google.com/citations?user=jvCvNPQAAAAJ&hl=en/">Yitao Xu</a><sup>* 1</sup>,</span>
                         <span class="author-block">
-                            <a href="https://scholar.google.com/citations?user=A_HbzQMAAAAJ/">Alexander Mordvinstev</a><sup>2</sup>,</span>
+                            <a href="https://scholar.google.ch/citations?user=A_HbzQMAAAAJ&hl=en/">Alexander Mordvinstev</a><sup>2</sup>,</span>
                         <br>
                         <span class="author-block">
                             <a href="https://scholar.google.se/citations?user=x5sfH5MAAAAJ&hl=en/">Eyvind Niklasson</a><sup>2</sup>,</span>
