--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <span class="author-block">
                             <a href="https://scholar.google.com/citations?user=kCy8JG8AAAAJ&hl=en">Tong Zhang</a><sup>1</sup>,</span>
                         <span class="author-block">
-                            <a href="https://www.epfl.ch/labs/ivrl/">Sabine Süsstrunk</a><sup>1</sup></span>
+                            <a href="https://scholar.google.com/citations?user=EX3OYP4AAAAJ">Sabine Süsstrunk</a><sup>1</sup></span>
 
 
                     </div>
