--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
 
 
+
     </script>
 
 </head>
@@ -162,14 +163,15 @@
 
                             <!-- Arxiv. -->
                             <span class="link-block">
-                                <a href=""
+                                <a href="https://arxiv.org/abs/2311.02820"
                                    class="external-link button is-normal is-rounded is-dark">
                                   <span class="icon">
                                       <i class="ai ai-arxiv"></i>
                                   </span>
-                                  <span>arXiv (Coming Soon)</span>
+                                  <span>arXiv</span>
                                 </a>
                             </span>
+
 
                             <span class="link-block">
                                 <a href="supplementary/"
@@ -180,6 +182,16 @@
                                   <span>Supplementary</span>
                                 </a>
                             </span>
+
+                            <span class="link-block">
+                        <a href="https://drive.google.com/file/d/16dQT_8hYl6qRMQe6J3NF6Y3NA5w2Ya4v/view?usp=sharing"
+                           class="external-link button is-normal is-rounded is-dark">
+                          <span class="icon">
+                              <i class="fas fa-database"></i>
+                          </span>
+                          <span>Dataset</span>
+                          </a>
+                      </span>
 
                             <br>
 
@@ -206,15 +218,6 @@
                           </a>
                       </span>
 
-                            <span class="link-block">
-                        <a href="https://drive.google.com/file/d/16dQT_8hYl6qRMQe6J3NF6Y3NA5w2Ya4v/view?usp=sharing"
-                           class="external-link button is-normal is-rounded is-dark">
-                          <span class="icon">
-                              <i class="fas fa-database"></i>
-                          </span>
-                          <span>Dataset</span>
-                          </a>
-                      </span>
 
                         </div>
 
