--- a/index.html
+++ b/index.html
@@ -809,7 +809,14 @@
 <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
         <h2 class="title">BibTeX</h2>
-        <pre><code>Citation</code></pre>
+        <pre><code>@misc{pajouheshgar2023mesh,
+      title={Mesh Neural Cellular Automata},
+      author={Ehsan Pajouheshgar and Yitao Xu and Alexander Mordvintsev and Eyvind Niklasson and Tong Zhang and Sabine Süsstrunk},
+      year={2023},
+      eprint={2311.02820},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}</code></pre>
     </div>
 
 </section>
