--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                         <canvas id="demo-canvas"></canvas>
                         <div id="canvas_text">
                             <div>steps / sec: <span id="sps"></span></div>
-                            <div>frame / sec: <span id="fps"></span></div>
+                            <div>frames / sec: <span id="fps"></span></div>
                         </div>
 
                         <div id="canvas_shading_controls">
