Add motion videos to supp; remove author information; add link to the properties

--- a/index.html
+++ b/index.html
@@ -116,34 +116,30 @@
             <div class="columns is-centered">
                 <div class="column has-text-centered">
                     <h1 class="title is-1 publication-title">Mesh Neural Cellular Automata</h1>
-                    <div class="is-size-5 publication-authors">
-                        <span class="author-block">
-                            <a href="https://scholar.google.com/citations?hl=en&user=bddQ6pQAAAAJ">Ehsan Pajouheshgar</a><sup>* 1</sup>,</span>
-                        <span class="author-block">
-                            <a href="https://scholar.google.com/citations?user=jvCvNPQAAAAJ&hl=en/">Yitao Xu</a><sup>* 1</sup>,</span>
-                        <span class="author-block">
-                            <a href="https://scholar.google.ch/citations?user=A_HbzQMAAAAJ&hl=en/">Alexander Mordvintsev</a><sup>2</sup>,</span>
-                        <br>
-                        <span class="author-block">
-                            <a href="https://scholar.google.se/citations?user=x5sfH5MAAAAJ&hl=en/">Eyvind Niklasson</a><sup>2</sup>,</span>
-                        <span class="author-block">
-                            <a href="https://scholar.google.com/citations?user=kCy8JG8AAAAJ&hl=en">Tong Zhang</a><sup>1</sup>,</span>
-                        <span class="author-block">
-                            <a href="https://scholar.google.com/citations?user=EX3OYP4AAAAJ">Sabine Süsstrunk</a><sup>1</sup></span>
 
-
-                    </div>
-                    <div class="is-size-6 publication-authors">
-                        <span class="author-block"><sup>*</sup> Denotes equal contribution</span>
-                    </div>
-                    <!--                    <div class="is-size-5 publication-authors">-->
-                    <!--                        <span class="author-block">School of Computer and Communication Sciences (IC)</span>-->
-                    <!--                    </div>-->
-                    <div class="is-size-5 publication-authors">
-                        <span class="author-block"><sup>1</sup>EPFL</span>
-                        &emsp;&emsp;
-                        <span class="author-block"><sup>2</sup>Google Research</span>
-                    </div>
+<!--                    <div class="is-size-5 publication-authors">-->
+<!--                        <span class="author-block">-->
+<!--                            <a href="https://scholar.google.com/citations?hl=en&user=bddQ6pQAAAAJ">Ehsan Pajouheshgar</a><sup>* 1</sup>,</span>-->
+<!--                        <span class="author-block">-->
+<!--                            <a href="https://scholar.google.com/citations?user=jvCvNPQAAAAJ&hl=en/">Yitao Xu</a><sup>* 1</sup>,</span>-->
+<!--                        <span class="author-block">-->
+<!--                            <a href="https://scholar.google.ch/citations?user=A_HbzQMAAAAJ&hl=en/">Alexander Mordvintsev</a><sup>2</sup>,</span>-->
+<!--                        <br>-->
+<!--                        <span class="author-block">-->
+<!--                            <a href="https://scholar.google.se/citations?user=x5sfH5MAAAAJ&hl=en/">Eyvind Niklasson</a><sup>2</sup>,</span>-->
+<!--                        <span class="author-block">-->
+<!--                            <a href="https://scholar.google.com/citations?user=kCy8JG8AAAAJ&hl=en">Tong Zhang</a><sup>1</sup>,</span>-->
+<!--                        <span class="author-block">-->
+<!--                            <a href="https://scholar.google.com/citations?user=EX3OYP4AAAAJ">Sabine Süsstrunk</a><sup>1</sup></span>-->
+<!--                    </div>-->
+<!--                    <div class="is-size-6 publication-authors">-->
+<!--                        <span class="author-block"><sup>*</sup> Denotes equal contribution</span>-->
+<!--                    </div>-->
+<!--                    <div class="is-size-5 publication-authors">-->
+<!--                        <span class="author-block"><sup>1</sup>EPFL</span>-->
+<!--                        &emsp;&emsp;-->
+<!--                        <span class="author-block"><sup>2</sup>Google Research</span>-->
+<!--                    </div>-->
 
                     <!--                    <div class="is-size-4 publication-authors">-->
                     <!--                        <span class="author-block">CVPR 2023 Conference</span>-->
@@ -163,15 +159,15 @@
                             <!--              </span>-->
 
                             <!-- Arxiv. -->
-                            <span class="link-block">
-                                <a href="https://arxiv.org/abs/2311.02820"
-                                   class="external-link button is-normal is-rounded is-dark">
-                                  <span class="icon">
-                                      <i class="ai ai-arxiv"></i>
-                                  </span>
-                                  <span>arXiv</span>
-                                </a>
-                            </span>
+<!--                            <span class="link-block">-->
+<!--                                <a href="https://arxiv.org/abs/2311.02820"-->
+<!--                                   class="external-link button is-normal is-rounded is-dark">-->
+<!--                                  <span class="icon">-->
+<!--                                      <i class="ai ai-arxiv"></i>-->
+<!--                                  </span>-->
+<!--                                  <span>arXiv</span>-->
+<!--                                </a>-->
+<!--                            </span>-->
 
 
                             <span class="link-block">
@@ -577,7 +573,7 @@
         <div class="columns">
 
 
-            <div class="column">
+            <div class="column" id="MeshNCAProp">
                 <h2 class="title is-3">MeshNCA Properties</h2>
                 <div class="content has-text-justified">
 
@@ -811,14 +807,15 @@
 <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
         <h2 class="title">BibTeX</h2>
-        <pre><code>@misc{pajouheshgar2023mesh,
-      title={Mesh Neural Cellular Automata},
-      author={Ehsan Pajouheshgar and Yitao Xu and Alexander Mordvintsev and Eyvind Niklasson and Tong Zhang and Sabine Süsstrunk},
-      year={2023},
-      eprint={2311.02820},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
-}</code></pre>
+        <pre><code></code></pre>
+<!--        <pre><code>@misc{pajouheshgar2023mesh,-->
+<!--      title={Mesh Neural Cellular Automata},-->
+<!--      author={Ehsan Pajouheshgar and Yitao Xu and Alexander Mordvintsev and Eyvind Niklasson and Tong Zhang and Sabine Süsstrunk},-->
+<!--      year={2023},-->
+<!--      eprint={2311.02820},-->
+<!--      archivePrefix={arXiv},-->
+<!--      primaryClass={cs.CV}-->
+<!--}</code></pre>-->
     </div>
 
 </section>
