Change rotation label to orientation

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                         </div>
 
                         <div>
-                            <input type="range" id="rotation" min="0" max="360" step="1" value="0"></br>Rotation:
+                            <input type="range" id="rotation" min="0" max="360" step="1" value="0"></br>Orientation:
                             <label id="rotationLabel"></label><br>
                             <input type="range" id="bumpiness" min="-10" max="10" step="1" value="3"></br>Bumpiness:
                             <label id="bumpinessLabel"></label>
