--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
 
 
 
+
+
+
+
+
     </script>
 
 </head>
@@ -117,29 +122,29 @@
                 <div class="column has-text-centered">
                     <h1 class="title is-1 publication-title">Mesh Neural Cellular Automata</h1>
 
-<!--                    <div class="is-size-5 publication-authors">-->
-<!--                        <span class="author-block">-->
-<!--                            <a href="https://scholar.google.com/citations?hl=en&user=bddQ6pQAAAAJ">Ehsan Pajouheshgar</a><sup>* 1</sup>,</span>-->
-<!--                        <span class="author-block">-->
-<!--                            <a href="https://scholar.google.com/citations?user=jvCvNPQAAAAJ&hl=en/">Yitao Xu</a><sup>* 1</sup>,</span>-->
-<!--                        <span class="author-block">-->
-<!--                            <a href="https://scholar.google.ch/citations?user=A_HbzQMAAAAJ&hl=en/">Alexander Mordvintsev</a><sup>2</sup>,</span>-->
-<!--                        <br>-->
-<!--                        <span class="author-block">-->
-<!--                            <a href="https://scholar.google.se/citations?user=x5sfH5MAAAAJ&hl=en/">Eyvind Niklasson</a><sup>2</sup>,</span>-->
-<!--                        <span class="author-block">-->
-<!--                            <a href="https://scholar.google.com/citations?user=kCy8JG8AAAAJ&hl=en">Tong Zhang</a><sup>1</sup>,</span>-->
-<!--                        <span class="author-block">-->
-<!--                            <a href="https://scholar.google.com/citations?user=EX3OYP4AAAAJ">Sabine Süsstrunk</a><sup>1</sup></span>-->
-<!--                    </div>-->
-<!--                    <div class="is-size-6 publication-authors">-->
-<!--                        <span class="author-block"><sup>*</sup> Denotes equal contribution</span>-->
-<!--                    </div>-->
-<!--                    <div class="is-size-5 publication-authors">-->
-<!--                        <span class="author-block"><sup>1</sup>EPFL</span>-->
-<!--                        &emsp;&emsp;-->
-<!--                        <span class="author-block"><sup>2</sup>Google Research</span>-->
-<!--                    </div>-->
+                    <!--                    <div class="is-size-5 publication-authors">-->
+                    <!--                        <span class="author-block">-->
+                    <!--                            <a href="https://scholar.google.com/citations?hl=en&user=bddQ6pQAAAAJ">Ehsan Pajouheshgar</a><sup>* 1</sup>,</span>-->
+                    <!--                        <span class="author-block">-->
+                    <!--                            <a href="https://scholar.google.com/citations?user=jvCvNPQAAAAJ&hl=en/">Yitao Xu</a><sup>* 1</sup>,</span>-->
+                    <!--                        <span class="author-block">-->
+                    <!--                            <a href="https://scholar.google.ch/citations?user=A_HbzQMAAAAJ&hl=en/">Alexander Mordvintsev</a><sup>2</sup>,</span>-->
+                    <!--                        <br>-->
+                    <!--                        <span class="author-block">-->
+                    <!--                            <a href="https://scholar.google.se/citations?user=x5sfH5MAAAAJ&hl=en/">Eyvind Niklasson</a><sup>2</sup>,</span>-->
+                    <!--                        <span class="author-block">-->
+                    <!--                            <a href="https://scholar.google.com/citations?user=kCy8JG8AAAAJ&hl=en">Tong Zhang</a><sup>1</sup>,</span>-->
+                    <!--                        <span class="author-block">-->
+                    <!--                            <a href="https://scholar.google.com/citations?user=EX3OYP4AAAAJ">Sabine Süsstrunk</a><sup>1</sup></span>-->
+                    <!--                    </div>-->
+                    <!--                    <div class="is-size-6 publication-authors">-->
+                    <!--                        <span class="author-block"><sup>*</sup> Denotes equal contribution</span>-->
+                    <!--                    </div>-->
+                    <!--                    <div class="is-size-5 publication-authors">-->
+                    <!--                        <span class="author-block"><sup>1</sup>EPFL</span>-->
+                    <!--                        &emsp;&emsp;-->
+                    <!--                        <span class="author-block"><sup>2</sup>Google Research</span>-->
+                    <!--                    </div>-->
 
                     <!--                    <div class="is-size-4 publication-authors">-->
                     <!--                        <span class="author-block">CVPR 2023 Conference</span>-->
@@ -159,15 +164,15 @@
                             <!--              </span>-->
 
                             <!-- Arxiv. -->
-<!--                            <span class="link-block">-->
-<!--                                <a href="https://arxiv.org/abs/2311.02820"-->
-<!--                                   class="external-link button is-normal is-rounded is-dark">-->
-<!--                                  <span class="icon">-->
-<!--                                      <i class="ai ai-arxiv"></i>-->
-<!--                                  </span>-->
-<!--                                  <span>arXiv</span>-->
-<!--                                </a>-->
-<!--                            </span>-->
+                            <!--                            <span class="link-block">-->
+                            <!--                                <a href="https://arxiv.org/abs/2311.02820"-->
+                            <!--                                   class="external-link button is-normal is-rounded is-dark">-->
+                            <!--                                  <span class="icon">-->
+                            <!--                                      <i class="ai ai-arxiv"></i>-->
+                            <!--                                  </span>-->
+                            <!--                                  <span>arXiv</span>-->
+                            <!--                                </a>-->
+                            <!--                            </span>-->
 
 
                             <span class="link-block">
@@ -263,18 +268,18 @@
                     <div class="canvas_container">
                         <canvas id="demo-canvas"></canvas>
                         <div id="canvas_text">
-                            <div>steps / sec: <span id="sps"></span></div>
-                            <div>frames / sec: <span id="fps"></span></div>
+                            <div><b>steps / sec: </b><span id="sps"></span></div>
+                            <div><b>frames / sec: </b><span id="fps"></span></div>
                         </div>
 
                         <div id="canvas_shading_controls">
-                            <input type="checkbox" id="enable_roughness_map" checked="checked"> Roughness Map</br>
-                            <input type="checkbox" id="enable_normal_map" checked="checked"> Normal Map</br>
                             <input type="checkbox" id="enable_ao_map" checked="checked"> AO Map</br>
+                            <input type="checkbox" id="enable_normal_map" checked="checked"> Normal Map</br>
+                            <input type="checkbox" id="enable_roughness_map" checked="checked"> Roughness Map</br>
                         </div>
 
                         <div id="canvas_vis_mode">
-                            <center>Vis Mode</center>
+                            <b>Vis Mode</b><br>
                             <select name="Visualization Mode" id="visMode" class="option_select">
                                 <option value="color">Color</option>
                                 <option value="albedo">Albedo</option>
@@ -287,10 +292,19 @@
                         </div>
 
                         <div id="canvas_grafting">
-                            Grafting Texture<br>
-                            <input type="checkbox" id="enable_grafting" checked="checked"> Enable Grafting</br>
+<!--                            <input type="checkbox"  checked="checked"> Enable Grafting</br>-->
+                            <b>Brush Type</b>
+                            <label class="toggler-wrapper style-19">
+                                <input type="checkbox" id="enable_grafting" checked="checked">
+                                <div class="toggler-slider">
+                                    <div class="toggler-knob"></div>
+                                </div>
+                            </label>
+<!--                            <center><b>Graft</b></center>-->
                             <select name="Grafting Texture" id="graft_select" class="option_select">
                             </select>
+
+
 
                         </div>
 
@@ -350,8 +364,11 @@
                                 <input type="radio" name="brush" checked="checked"><img
                                     src="images/brush_L.png" width="64px" height="64px"/>
                             </label>
-                            <br> Brush Size
+                            <br> Brush Size <br>
+
+
                         </div>
+
 
                         <div>
                             <input type="range" id="rotation" min="0" max="360" step="1" value="0"></br>Orientation:
@@ -378,6 +395,7 @@
                             </label>
                             <br>Subdivision Level
                         </div>
+
                         <!--                        <div id='alignSelect'>-->
                         <!--                            <label>-->
                         <!--                                <input type="radio" checked="checked" name="align"><img-->
@@ -808,14 +826,14 @@
     <div class="container is-max-desktop content">
         <h2 class="title">BibTeX</h2>
         <pre><code></code></pre>
-<!--        <pre><code>@misc{pajouheshgar2023mesh,-->
-<!--      title={Mesh Neural Cellular Automata},-->
-<!--      author={Ehsan Pajouheshgar and Yitao Xu and Alexander Mordvintsev and Eyvind Niklasson and Tong Zhang and Sabine Süsstrunk},-->
-<!--      year={2023},-->
-<!--      eprint={2311.02820},-->
-<!--      archivePrefix={arXiv},-->
-<!--      primaryClass={cs.CV}-->
-<!--}</code></pre>-->
+        <!--        <pre><code>@misc{pajouheshgar2023mesh,-->
+        <!--      title={Mesh Neural Cellular Automata},-->
+        <!--      author={Ehsan Pajouheshgar and Yitao Xu and Alexander Mordvintsev and Eyvind Niklasson and Tong Zhang and Sabine Süsstrunk},-->
+        <!--      year={2023},-->
+        <!--      eprint={2311.02820},-->
+        <!--      archivePrefix={arXiv},-->
+        <!--      primaryClass={cs.CV}-->
+        <!--}</code></pre>-->
     </div>
 
 </section>
