--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                         <div class="whitespace"></div>
                     </div>
                     <div id="texhint">
-                        <div class="pattern-selector-title"><span>Original Texture</span></div>
+                        <div class="pattern-selector-title"><span>Main Texture</span></div>
 
                         <!--                        <div class='texture-square' id="texture_img"></div>-->
                         <div id="texture_img"></div>
