Add headers to graft videos

--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
                       </span>
 
                             <span class="link-block">
-                        <a href="supplementary/demo_guideline.pdf"
+                        <a href="supplementary/demo_instructions.pdf"
                            class="external-link button is-normal is-rounded">
                           <span class="icon">
                               <i class="fas fa-file-pdf"></i>
                           </span>
-                          <span>Demo Guideline</span>
+                          <span>Demo Instructions</span>
                         </a>
                       </span>
 
