--- a/index.html
+++ b/index.html
@@ -319,15 +319,15 @@
                                 </a>
                             </span>
 
-                            <span class="link-block">
-                        <a href="https://drive.google.com/file/d/16dQT_8hYl6qRMQe6J3NF6Y3NA5w2Ya4v/view?usp=sharing"
-                           class="external-link button is-normal is-rounded">
-                          <span class="icon">
-                              <i class="fas fa-database"></i>
-                          </span>
-                          <span>Dataset</span>
-                          </a>
-                      </span>
+<!--                            <span class="link-block">-->
+<!--                        <a href="https://drive.google.com/file/d/16dQT_8hYl6qRMQe6J3NF6Y3NA5w2Ya4v/view?usp=sharing"-->
+<!--                           class="external-link button is-normal is-rounded">-->
+<!--                          <span class="icon">-->
+<!--                              <i class="fas fa-database"></i>-->
+<!--                          </span>-->
+<!--                          <span>Dataset</span>-->
+<!--                          </a>-->
+<!--                      </span>-->
 
                             <span class="link-block">
                         <a href="supplementary/demo_instructions.pdf"
