Add rate and scale sliders

--- a/index.html
+++ b/index.html
@@ -524,6 +524,15 @@
 
                         </div>
 
+                        <div>
+                            <input type="range" id="rate" min="0.01" max="1.0" step="0.01" value="1.0"></br>Rate:
+                            <label
+                                    id="rateLabel"></label><br>
+
+                                <input type="range" id="scale" min="-1.0" max="2.0" step="0.01" value="0.0"></br>Scale: <label
+                                    id="scaleLabel"></label>
+                        </div>
+
 
                         <!--                        <div id='alignSelect'>-->
                         <!--                            <label>-->
