--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <meta charset="utf-8">
     <meta name="description"
           content="Mesh Neural Cellular Automata">
-    <meta name="keywords" content="MeshNCA, NCA, DyNCA">
+    <meta name="keywords"
+          content="MeshNCA, NCA, 3D Texture Synthesis, PBR Textures, Animated Textures, Text-Based Texture Synthesis">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mesh Neural Cellular Automata</title>
 
@@ -58,6 +59,7 @@
     </script>
     <script type="text/x-mathjax-config">
   MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+
 
 
 
@@ -319,15 +321,15 @@
                                 </a>
                             </span>
 
-<!--                            <span class="link-block">-->
-<!--                        <a href="https://drive.google.com/file/d/16dQT_8hYl6qRMQe6J3NF6Y3NA5w2Ya4v/view?usp=sharing"-->
-<!--                           class="external-link button is-normal is-rounded">-->
-<!--                          <span class="icon">-->
-<!--                              <i class="fas fa-database"></i>-->
-<!--                          </span>-->
-<!--                          <span>Dataset</span>-->
-<!--                          </a>-->
-<!--                      </span>-->
+                            <!--                            <span class="link-block">-->
+                            <!--                        <a href="https://drive.google.com/file/d/16dQT_8hYl6qRMQe6J3NF6Y3NA5w2Ya4v/view?usp=sharing"-->
+                            <!--                           class="external-link button is-normal is-rounded">-->
+                            <!--                          <span class="icon">-->
+                            <!--                              <i class="fas fa-database"></i>-->
+                            <!--                          </span>-->
+                            <!--                          <span>Dataset</span>-->
+                            <!--                          </a>-->
+                            <!--                      </span>-->
 
                             <span class="link-block">
                         <a href="supplementary/demo_instructions.pdf"
@@ -437,7 +439,8 @@
                         <div class="play-reset tooltip" style="text-align: left;">
                     <span id="play-pause">
 
-                                                <svg class="demo-icon" id="play"><use xlink:href="#playIcon"></use></svg>
+                                                <svg class="demo-icon" id="play"><use
+                                                        xlink:href="#playIcon"></use></svg>
                                                 <svg class="demo-icon" id="pause" style="display: none;"><use
                                                         href="#pauseIcon"></use></svg>
                     </span>
@@ -529,7 +532,8 @@
                             <label
                                     id="rateLabel"></label><br>
 
-                                <input type="range" id="scale" min="-1.0" max="2.0" step="0.01" value="0.0"></br>Scale: <label
+                            <input type="range" id="scale" min="-1.0" max="2.0" step="0.01" value="0.0"></br>Scale:
+                            <label
                                     id="scaleLabel"></label>
                         </div>
 
