--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
 
 
 
+
+
     </script>
 
 </head>
@@ -258,33 +260,36 @@
                 <div class="column has-text-centered">
                     <h1 class="title is-1 publication-title">Mesh Neural Cellular Automata</h1>
 
-                    <!--                    <div class="is-size-5 publication-authors">-->
-                    <!--                        <span class="author-block">-->
-                    <!--                            <a href="https://scholar.google.com/citations?hl=en&user=bddQ6pQAAAAJ">Ehsan Pajouheshgar</a><sup>* 1</sup>,</span>-->
-                    <!--                        <span class="author-block">-->
-                    <!--                            <a href="https://scholar.google.com/citations?user=jvCvNPQAAAAJ&hl=en/">Yitao Xu</a><sup>* 1</sup>,</span>-->
-                    <!--                        <span class="author-block">-->
-                    <!--                            <a href="https://scholar.google.ch/citations?user=A_HbzQMAAAAJ&hl=en/">Alexander Mordvintsev</a><sup>2</sup>,</span>-->
-                    <!--                        <br>-->
-                    <!--                        <span class="author-block">-->
-                    <!--                            <a href="https://scholar.google.se/citations?user=x5sfH5MAAAAJ&hl=en/">Eyvind Niklasson</a><sup>2</sup>,</span>-->
-                    <!--                        <span class="author-block">-->
-                    <!--                            <a href="https://scholar.google.com/citations?user=kCy8JG8AAAAJ&hl=en">Tong Zhang</a><sup>1</sup>,</span>-->
-                    <!--                        <span class="author-block">-->
-                    <!--                            <a href="https://scholar.google.com/citations?user=EX3OYP4AAAAJ">Sabine Süsstrunk</a><sup>1</sup></span>-->
-                    <!--                    </div>-->
-                    <!--                    <div class="is-size-6 publication-authors">-->
-                    <!--                        <span class="author-block"><sup>*</sup> Denotes equal contribution</span>-->
-                    <!--                    </div>-->
-                    <!--                    <div class="is-size-5 publication-authors">-->
-                    <!--                        <span class="author-block"><sup>1</sup>EPFL</span>-->
-                    <!--                        &emsp;&emsp;-->
-                    <!--                        <span class="author-block"><sup>2</sup>Google Research</span>-->
-                    <!--                    </div>-->
+                    <div class="is-size-5 publication-authors">
+                                            <span class="author-block">
+                                                <a href="https://pajouheshgar.github.io">Ehsan Pajouheshgar</a><sup>* 1</sup>,</span>
+                        <span class="author-block">
+                                                <a href="https://xyt0098.github.io//">Yitao Xu</a><sup>* 1</sup>,</span>
+                        <span class="author-block">
+                                                <a href="https://scholar.google.ch/citations?user=A_HbzQMAAAAJ&hl=en/">Alexander Mordvintsev</a><sup>2</sup>,</span>
+                        <br>
+                        <span class="author-block">
+                                                <a href="https://scholar.google.se/citations?user=x5sfH5MAAAAJ&hl=en/">Eyvind Niklasson</a><sup>2</sup>,</span>
+                        <span class="author-block">
+                                                <a href="https://scholar.google.com/citations?user=kCy8JG8AAAAJ&hl=en">Tong Zhang</a><sup>1</sup>,</span>
+                        <span class="author-block">
+                                                <a href="https://scholar.google.com/citations?user=EX3OYP4AAAAJ">Sabine Süsstrunk</a><sup>1</sup></span>
+                    </div>
 
-                    <!--                    <div class="is-size-4 publication-authors">-->
-                    <!--                        <span class="author-block">CVPR 2023 Conference</span>-->
-                    <!--                    </div>-->
+                    <div class="is-size-5 publication-authors">
+                        <span class="author-block"><sup>1</sup>EPFL</span>
+                        &emsp;&emsp;
+                        <span class="author-block"><sup>2</sup>Google Research</span>
+                    </div>
+
+
+                    <div class="is-size-4 publication-authors">
+                        <span class="author-block">ACM Transactions on Graphics (SIGGRAPH 2024)</span>
+                    </div>
+
+                    <div class="is-size-6 publication-authors">
+                        <span class="author-block"><sup>*</sup> Denotes equal contribution</span>
+                    </div>
 
                     <div class="column has-text-centered">
                         <div class="publication-links">
@@ -298,36 +303,16 @@
                             <!--                                            </a>-->
                             <!--                                          </span>-->
 
-                            <!--                            <span class="link-block">-->
-                            <!--                                                            <a href="https://arxiv.org/abs/2311.02820"-->
-                            <!--                                                               class="external-link button is-normal is-rounded">-->
-                            <!--                                                              <span class="icon">-->
-                            <!--                                                                  <i class="ai ai-arxiv"></i>-->
-                            <!--                                                              </span>-->
-                            <!--                                                              <span>arXiv</span>-->
-                            <!--                                                            </a>-->
-                            <!--                                                        </span>-->
-
-
                             <span class="link-block">
-                                <a href="supplementary/"
+                                <a href="https://arxiv.org/abs/2311.02820"
                                    class="external-link button is-normal is-rounded">
                                   <span class="icon">
-                      <i class="fas fa-folder"></i>
-                            </span>
-                                  <span>Supplementary</span>
+                                      <i class="ai ai-arxiv"></i>
+                                  </span>
+                                  <span>arXiv</span>
                                 </a>
                             </span>
 
-<!--                            <span class="link-block">-->
-<!--                        <a href="https://drive.google.com/file/d/16dQT_8hYl6qRMQe6J3NF6Y3NA5w2Ya4v/view?usp=sharing"-->
-<!--                           class="external-link button is-normal is-rounded">-->
-<!--                          <span class="icon">-->
-<!--                              <i class="fas fa-database"></i>-->
-<!--                          </span>-->
-<!--                          <span>Dataset</span>-->
-<!--                          </a>-->
-<!--                      </span>-->
 
                             <span class="link-block">
                         <a href="supplementary/demo_instructions.pdf"
@@ -340,6 +325,26 @@
                       </span>
 
                             <br>
+
+                            <span class="link-block">
+                                <a href="supplementary/"
+                                   class="external-link button is-normal is-rounded">
+                                  <span class="icon">
+                                <i class="fas fa-folder"></i>
+                                  </span>
+                                  <span>Supplementary</span>
+                                </a>
+                            </span>
+
+                            <span class="link-block">
+                            <a href="https://drive.google.com/drive/folders/1KOihAMvekqGEGiJ8YzHWwc1kYn7RKo6F?usp=sharing"
+                               class="external-link button is-normal is-rounded">
+                              <span class="icon">
+                                  <i class="fas fa-database"></i>
+                              </span>
+                              <span>Meshes and Textures</span>
+                              </a>
+                        </span>
 
 
                             <!-- Video Link. -->
@@ -437,7 +442,8 @@
                         <div class="play-reset tooltip" style="text-align: left;">
                     <span id="play-pause">
 
-                                                <svg class="demo-icon" id="play"><use xlink:href="#playIcon"></use></svg>
+                                                <svg class="demo-icon" id="play"><use
+                                                        xlink:href="#playIcon"></use></svg>
                                                 <svg class="demo-icon" id="pause" style="display: none;"><use
                                                         href="#pauseIcon"></use></svg>
                     </span>
