--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
 <!--                            </label>-->
 
                             <span id="record">
-                                <img id="record_off" src="images/record_off.png" width="64px" height="64px" style="padding: 5px;"/>
-                                <img id="record_on" src="images/record_on.png" width="64px" height="64px" style="padding: 5px; display: none;"/>
+                                <img id="record_off" src="images/record_off.png" width="64px" height="64px" style="padding: 5px; padding-bottom: 12px"/>
+                                <img id="record_on" src="images/record_on.png" width="64px" height="64px" style="padding: 5px; padding-bottom: 12px; display: none;"/>
                             </span>
                         </div>
                         <div class="speed">
