--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
                                     synthesized
                                     texture depends on the number of the vertices on the mesh. This allows the user to
                                     control the
-                                    texture density by the subdividing the mesh.
+                                    texture density by subdividing the mesh.
 
                                 </p>
                                 <div class="content is-centered has-text-centered">
@@ -859,7 +859,7 @@
                             <div class="content">
                                 <h2 class="title is-5 is-centered has-text-centered">Texture Orientation Control</h2>
                                 <p>
-                                    In MeshNCA, cells receive directional information thorough the
+                                    In MeshNCA, cells receive directional information through the
                                     spherical-harmonics-based
                                     perception. By rotating the spherical harmonics basis around the surface normal for
                                     each cell,
